# InspireFace

./: .gitignore  .gitmodules  3rdparty  CMakeLists.txt  README.md  README~.md  docker-compose.yml  model_helper_const.h
cpp/hyperface/: CMakeLists.txt  CodeTable.h  DataType.h  FaceContext.cpp  FaceContext.h  TrackContext.cpp  TrackContext.h  config.h  data_type.h  face_context.cpp  face_context.h  herror.h  log.h  model_index.h  utils.h
cpp/hyperface/attribute_module/liveness/: AntiSpoofing.h
cpp/hyperface/c_api/: htypedef.h  hyperface.cc  hyperface.h  hyperface_internal.h
cpp/hyperface/common/face_data/: DataTools.h  FaceDataType.h  data_tools.h  face_data_type.h
cpp/hyperface/common/face_info/: FaceObject.h  FaceProcess.h  all.h  face_object.h  face_process.h
cpp/hyperface/face_detect/: SCRFD.cpp  SCRFD.h  all.h
cpp/hyperface/landmark/: Landmark.cpp  Landmark.h
cpp/hyperface/liveness/: AntiSpoofing.cpp
cpp/hyperface/middleware/: AnyNet.h  Parameter.cpp  Parameter.h  Timer.h  any_net.h
cpp/hyperface/middleware/camera_stream/: camera_stream.h
cpp/hyperface/middleware/inference_helper/: inference_helper.cpp  inference_helper.h  inference_helper_mnn.cpp  inference_helper_rknn.cpp  inference_helper_rknn.h  inference_helper_rknn_adapter.cpp  inference_helper_rknn_adapter.h
cpp/hyperface/middleware/model_loader/: ModelLoader.cpp  model_loader.cpp  model_loader.h
cpp/hyperface/pipeline_module/: FacePipeline.cpp  FacePipeline.h  face_pipeline.cpp  face_pipeline.h
cpp/hyperface/pipeline_module/attribute/: AgePredict.cpp  GenderPredict.cpp  MaskPredict.cpp  MaskPredict.h  all.h  mask_predict.cpp  mask_predict.h
cpp/hyperface/pipeline_module/liveness/: LivenessInteraction.cpp  RBGAntiSpoofing.cpp  RBGAntiSpoofing.h  all.h  rgb_anti_spoofing.cpp  rgb_anti_spoofing.h
cpp/hyperface/pipeline_module/quality/: FacePoseQuality.cpp  FacePoseQuality.h  FaceQuality.cpp  FaceQuality.h
cpp/hyperface/pipeline_module/recognition/: Recognition.h
cpp/hyperface/recognition_module/: Alignment.h  FaceRecognition.cpp  FaceRecognition.h  face_recognition.cpp  face_recognition.h
cpp/hyperface/recognition_module/extract/: Alignment.h  Extract.cpp  Extract.h  (+1 more)
cpp/hyperface/track/: FaceTrack.cpp  FaceTrack.h
cpp/hyperface/track_module/: FaceTrack.cpp  FaceTrack.h  face_track.cpp  face_track.h
cpp/inspireface/: CMakeLists.txt  config.h  data_type.h  face_context.cpp  face_context.h  face_session.cpp  face_session.h  herror.h  information.h  information.h.in  log.cpp  log.h  meta.cpp.in  model_index.h  session.cpp  utils.h  version.txt
cpp/inspireface/Initialization_module/: launch.cpp  launch.h  resource_manage.h
cpp/inspireface/c_api/: inspireface.cc  inspireface.h  inspireface_internal.h  intypedef.h
cpp/inspireface/engine/: face_session.cpp  face_session.h
cpp/inspireface/feature_hub/: feature_hub.cpp  feature_hub.h  feature_hub_db.cpp  feature_hub_db.h
cpp/inspireface/image_process/: frame_process.cpp  frame_process.h
cpp/inspireface/initialization_module/: launch.cpp  launch.h  resource_manage.h
cpp/inspireface/middleware/: Parameter.cpp  Parameter.h  any_net.h  any_net_adapter.h  configurable.cpp  configurable.h  costman.h  cuda_toolkit.cpp  cuda_toolkit.h  inspirecv_image_process.h  mnn_infer.h  timer.cpp  timer.h  utils.h
cpp/inspireface/model_hub/: model_hub.cpp  model_hub.h
cpp/inspireface/pipeline_module/: face_pipeline.cpp  face_pipeline.h  face_pipeline_module.cpp  face_pipeline_module.h
cpp/inspireface/platform/: platform.h
cpp/inspireface/recognition_module/: dest_const.h  face_feature_extraction.cpp  face_feature_extraction_module.cpp  face_feature_extraction_module.h  face_recognition.cpp  face_recognition.h  similarity_converter.h
cpp/inspireface/runtime_module/: launch.cpp
cpp/inspireface/track_module/: face_track.cpp  face_track.h  face_track_module.cpp  face_track_module.h
cpp/sample/: CMakeLists.txt  archive_test.cpp  archive_tracker.cpp  bm_sample.cpp  c_api_sample.cpp  context_sample.cpp  loop_tracker.cpp  net_sample.cpp  rec_sample.cpp  test_sample.cpp  test_sqlite_sample.cpp  track_sample.cpp  tracker_sample.cpp
cpp/sample/api/: sample_cpp_face_track.cpp  sample_cpp_resource_pool.cpp  sample_cpu_watching.c  sample_face_comparison.c  sample_face_comparison.cpp  sample_face_crud.c  sample_face_track.c  sample_face_track.cpp  sample_face_track_benchmark.c  sample_face_track_benchmark.cpp  sample_feature_hub.cpp  sample_feature_hub_persistence.c  sample_load_reload.cpp
cpp/sample/cpp/: face_detect.cpp  leak.cpp  sample_face_comparison.cpp  sample_face_recognition.cpp  sample_face_search.cpp  sample_face_track.cpp  sample_face_track_cost.cpp  sample_face_track_mt.cpp  sample_face_track_video.cpp
cpp/sample/cpp_api/: cpp_gray_input.cpp  cpp_sample_affine.cpp  cpp_sample_face_comparison.cpp  cpp_sample_face_track.cpp  cpp_sample_inspirecv.cpp
cpp/sample/new/: new_tracker_pipeline.cpp  new_tracker_sample.cpp
cpp/sample/rk_sample/: debug_rk_rec.cpp  rk_face_det_sample.cpp  rk_face_recognize_sample.cpp  rk_simple_net_sample.cpp  rk_tracker_sample.cpp  rknn_adapter.h
cpp/sample/rv1106/: face_attribute.cpp  face_detect.cpp  rga_image.cpp
cpp/sample/source/: expansion_load.cpp  feature_hub_sample.cpp  landmark_sample.cpp  tensorrt_load.cpp  tracker_pipeline.cpp  tracker_sample.cpp
cpp/sample/utils/: test_helper.h
cpp/test/: CMakeLists.txt  test.cpp  test_api.cpp  test_base.cpp  test_cpp.cpp  test_debug.cpp  test_source.cpp
cpp/test/api/: test_face_context.cpp  test_face_pipeline.cpp  test_feature_manage.cpp
cpp/test/common/: test_settings.cpp  test_settings.h
cpp/test/settings/: check.h  enviro.h  test_settings.cpp  test_settings.h
cpp/test/source/: face_detect_track.cpp  face_face_data.cpp  face_feature_management.cpp  face_pipeline.cpp  face_recognition.cpp  test_source_camera_stream.cpp  test_source_face_detect_track.cpp  test_source_face_face_data.cpp  test_source_face_feature_management.cpp  test_source_face_pipeline.cpp  test_source_face_recognition.cpp
cpp/test/test_helper/: test_help.h  test_tools.h
(+1285 files in other folders)
